# DigiLibs

./: .gitignore  README.md
PVRTexLib/: PVRTexLibConfig.cmake
PVRTexLib/install/: install.cmake
PVRTexLib/install/darwin/: PVRTexLib.cmake  install  install.cmake
PVRTexLib/install/win32_vs10/: PVRTexLib.cmake  install.bat  install.cmake
boost/: darwin  vs10-win32.bat  vs10-win64.bat
cmake/: CMakeLists.txt  install  vs10-win64.bat  xcode
cmake/antlr3c/: CMakeLists.txt  antlr3cConfig.cmake
cmake/antlr3c/include/: antlr3config.h.cmake
cmake/freeimage/: CMakeLists.txt  FreeImageConfig.cmake  jpegConfig.cmake  pngConfig.cmake  tiffConfig.cmake  zlibConfig.cmake
cmake/freeimage/Source/: CMakeLists.txt
cmake/freeimage/Source/LibJPEG/: CMakeLists.txt
cmake/freeimage/Source/LibOpenJPEG/: CMakeLists.txt
cmake/freeimage/Source/LibPNG/: CMakeLists.txt
cmake/freeimage/Source/LibRawLite/: CMakeLists.txt
cmake/freeimage/Source/LibTIFF4/: CMakeLists.txt
cmake/freeimage/Source/OpenEXR/: CMakeLists.txt
cmake/freeimage/Source/ZLib/: CMakeLists.txt
cmake/freetype/: CMakeLists.txt  freetypeConfig.cmake
cmake/imagequant/: CMakeLists.txt  imagequantConfig.cmake
cmake/ogg/: CMakeLists.txt  oggConfig.cmake
cmake/ogg/libogg/: CMakeLists.txt
cmake/ogg/libvorbis/: CMakeLists.txt
cmake/squish/: CMakeLists.txt  squishConfig.cmake
llvm/: CMakeLists.txt  clang.patch  llvm.patch  llvmConfig.cmake  vs10-win64.bat  xcode
vpx/: vpxConfig.cmake
vpx/install/: install.cmake
vpx/install/darwin/: install  install.cmake  vpx.cmake
vpx/install/vs10-win64/: generate  install.bat  install.cmake  vpx.cmake
